# delaunator-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
benches/: bench.rs
examples/: svg.rs  triangulate.rs
src/: lib.rs
tests/: tests.rs
tests/fixtures/: grid.json  issue10.json  issue11js.json  issue24.json  issue24js.json  issue43js.json  issue44js.json  robust2.json  robust4.json  robust5.json  robust6.json  ukraine.json
