[package]
name = "delaunator"
version = "0.3.0"
edition = "2018"
description = "A very fast 2D Delaunay triangulation library."
documentation = "https://docs.rs/delaunator"
repository = "https://github.com/mourner/delaunator-rs"
readme = "README.md"
license = "ISC"
categories = ["algorithms", "data-structures"]
keywords = ["delaunay", "triangulation", "tessellation", "spatial", "geometry"]
authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]

[dev-dependencies]
criterion = "0.3.4"
rand = "0.8.3"
serde_json = "1.0.64"

[features]
default = ["std"]
std = []

[lib]
bench = false

[[bench]]
name = "bench"
harness = false
