[package]
name = "delaunator"
version = "1.0.2"
edition = "2018"
description = "A very fast 2D Delaunay triangulation library."
documentation = "https://docs.rs/delaunator"
repository = "https://github.com/mourner/delaunator-rs"
readme = "README.md"
license = "ISC"
categories = ["algorithms", "data-structures"]
keywords = ["delaunay", "triangulation", "tessellation", "spatial", "geometry"]
authors = ["Vladimir Agafonkin <agafonkin@gmail.com>"]

[dependencies]
robust = "0.2.3"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"
serde_json = "1.0.94"

[features]
default = ["std"]
std = []

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[[example]]
name = "triangulate"
path = "examples/triangulate.rs"

[[example]]
name = "svg"
path = "examples/svg.rs"
